// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph gracefully renders a graph with a selected node id that does not exist 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -116.86168720299744,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -115.29217267887631,
          "top": 32.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -120,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -115,
          "top": 26,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Graph handles an empty graph 1`] = `""`;

exports[`Graph renders a complex graph with six nodes and seven edges 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 75,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      flipcoin1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 45,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      tails1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="2"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 105,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      heads1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 45,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 125,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      flipcoin2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="4"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 185,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      heads2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="5"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 85,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 185,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      tails2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -47.37748667179272,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-162.7185016281834deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 94.75497334358543,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -75.29217267887631,
          "top": 32.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -80,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -75,
          "top": 26,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
  <div
    key="1"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -46.5454782408499,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-169.4264765814391deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 153.0909564816998,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -15.292172678876305,
          "top": 32.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -20,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -15,
          "top": 26,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
  <div
    key="2"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -76.86168720299744,
          "top": 81,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -75.29217267887631,
          "top": 92.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -80,
          "top": 81,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -75,
          "top": 86,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
  <div
    key="3"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -77.62924020083418,
          "top": 81,
          "transform": "translate(100px, 44px) rotate(-160.70995378081128deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 85.25848040166836,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -10.25,
          "top": 110,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 30.5,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -10.25,
          "top": 140,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 30.5,
        }
      }
    />
    <div
      className="line"
      key="3"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -115.29217267887631,
          "top": 152.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="4"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -120,
          "top": 141,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -115,
          "top": 146,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
  <div
    key="4"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -76.46576201698781,
          "top": 81,
          "transform": "translate(100px, 44px) rotate(-170.0737544933483deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 162.93152403397562,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": 69.75,
          "top": 110,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 30.5,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": 69.75,
          "top": 140,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 30.5,
        }
      }
    />
    <div
      className="line"
      key="3"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -35.292172678876305,
          "top": 152.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="4"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -40,
          "top": 141,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -35,
          "top": 146,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
  <div
    key="5"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -76.86168720299744,
          "top": 141,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -115.2816343704163,
          "top": 152.75,
          "transform": "translate(100px, 44px) rotate(1.6110191079416032deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 160.5632687408326,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -120,
          "top": 141,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -115,
          "top": 146,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
  <div
    key="6"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -76.3323802938856,
          "top": 141,
          "transform": "translate(100px, 44px) rotate(-171.15818543980834deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 182.6647605877712,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -35.28615137912705,
          "top": 152.75,
          "transform": "translate(100px, 44px) rotate(1.8410162069244937deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 140.5723027582541,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -40,
          "top": 141,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -35,
          "top": 146,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Graph renders a graph with a placeholder node and edge 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="placeholderNode graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#9aa0a6",
          "height": 2,
          "left": -116.86168720299744,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#9aa0a6",
          "height": 2,
          "left": -7.75,
          "top": 47.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 25.5,
        }
      }
    />
  </div>
</div>
`;

exports[`Graph renders a graph with a selected node 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode nodeSelected"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#1a73e8",
          "height": 2,
          "left": -116.86168720299744,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#1a73e8",
          "height": 2,
          "left": -115.29217267887631,
          "top": 32.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#1a73e8",
          "height": 2,
          "left": -120,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#1a73e8",
          "left": -115,
          "top": 26,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Graph renders a graph with colored edges 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -116.86168720299744,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -115.29217267887631,
          "top": 32.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -120,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -115,
          "top": 26,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Graph renders a graph with colored nodes 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "red",
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "green",
        "left": 65,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
</div>
`;

exports[`Graph renders a graph with one node 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
</div>
`;

exports[`Graph renders a graph with two connectd nodes 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -116.86168720299744,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -115.29217267887631,
          "top": 32.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -120,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -115,
          "top": 26,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Graph renders a graph with two connectd nodes in reverse order 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -116.86168720299744,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(-166.8659776936037deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 123.7233744059949,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -115.29217267887631,
          "top": 32.75,
          "transform": "translate(100px, 44px) rotate(2.147585428298503deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": 120.58434535775261,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "backgroundColor": "#5f6368",
          "height": 2,
          "left": -120,
          "top": 21,
          "transform": "translate(100px, 44px) rotate(270deg)",
          "transition": "left 0.5s, top 0.5s",
          "width": -4.5,
        }
      }
    />
    <div
      className="arrowHead"
      style={
        Object {
          "borderTopColor": "#5f6368",
          "left": -115,
          "top": 26,
          "transform": "translate(94px, 41px) rotate(360deg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Graph renders a graph with two disparate nodes 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 65,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "transition": "left 0.5s, top 0.5s",
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
      style={
        Object {
          "background": undefined,
        }
      }
    >
      <WithStyles(Tooltip)
        title="Test icon tooltip"
      >
        <pure(CheckCircleIcon) />
      </WithStyles(Tooltip)>
    </div>
  </div>
</div>
`;
